2019-02-23  Gavin Smith  <gavinsmith0123@gmail.com>

	Make UTF-8 default input encoding.

	* doc/texinfo.tex: Remove line setting catcodes of non-ASCII 
	characters to "other".  Change a comment.
	* tp/t/test_sort.t: Update results.
	* tp/Texinfo/Common.pm (%default_customization_values)
	<INPUT_ENCODING_NAME, INPUT_PERL_ENCODING>: Use UTF-8 by default.
	* NEWS: Mention change.

2019-02-23  Gavin Smith  <gavinsmith0123@gmail.com>

	Avoid unnecessary change in test results.

	* tp/Texinfo/Convert/HTML.pm: Add 'return undef' to end of 
	function.  This stops an empty string being returned from the 
	sub for some reason.  This led to a change in the results
	for 'file_html' tests.

2019-02-23  Gavin Smith  <gavinsmith0123@gmail.com>

	Load more modules on demand.

	* tp/Texinfo/Convert/Converter.pm: Use fewer "use" declarations.
	(converter, sort_element_count): Use "require" statements
	to load modules on demand.  This cuts down the run time of
	'texi2any --help' as it stops Texinfo::Parser being loaded
	(about 0.6 sec -> 0.4 sec on my computer).

	This change depends on the previous change for module 
	namespaces; otherwise, the Texinfo::Parser::parser subroutine 
	can't be called in texi2any.pl, as the wrong hash is being 
	referenced for %Texinfo::Parser::.  This could be worked around 
	by putting the call within an 'eval' statement to delay the 
	choice of which namespace hash to use; however, this would be 
	too distracting if done too much.

2019-02-23  Gavin Smith  <gavinsmith0123@gmail.com>

	Avoid package typeglob assignment.

	* tp/Texinfo/ParserNonXS.pm: Use "package Texinfo::Parser" 
	instead of "package Texinfo::ParserNonXS" and then aliasing the 
	package namespace hash with a typeglob assignment.  Move
	"use Texinfo::Report" earlier in file and remove lengthy 
	comment.

	* tp/Texinfo/XS/parsetexi/Parsetexi.xs: Use "Texinfo::Parser" 
	instead of "Parsetexi" in MODULE and PACAKGE declarations.
